--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-/*
- * Use this CSS to learn some intersting techniques,
- * in case you're wondering how I built the UI.
- * Have fun! 😁
- */
-
 * {
   margin: 0;
   padding: 0;
@@ -41,6 +35,7 @@ nav {
 
 .login {
   display: flex;
+  opacity: 100;
 }
 
 .login__input {
